--- a/css/circle-text.css
+++ b/css/circle-text.css
@@ -10,21 +10,22 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: #673ab7;
+    background: #673ab7 center;
 }
+
 
 .circle {
     transform-style: preserve-3d;
-    animation: animate 8s linear infinite;
+    animation: animate 10s linear infinite;
 }
 
 @keyframes animate {
     0% {
-        transform: perspective(1000px) rotateY(360deg) rotateX(15deg);
+        transform: perspective(1000px) rotateY(360deg) rotateX(15deg) translateY(-30px);
     }
 
     100% {
-        transform: perspective(1000px) rotateY(0deg) rotateX(15deg);
+        transform: perspective(1000px) rotateY(0deg) rotateX(15deg) translateY(-30px);
     }
 }
 
@@ -34,12 +35,12 @@ body {
     left: 0;
     background: #fff;
     color: #35146f;
-    font-size: 4em;
+    font-size: 3em;
     padding: 5px 12px;
     border-top: 4px solid #35146f;
     border-bottom: 4px solid #35146f;
-    transform-style: preserve-3d;
     transform-origin: center;
+    transform-style: preserve-3d;
     transform: rotateY(calc(var(--char-index) * 12deg))
     translateZ(250px);
 }
