Feat: adding js function for when I click on the emoji

--- a/css/emoji.css
+++ b/css/emoji.css
@@ -16,5 +16,16 @@ body {
     font-size: 10rem;
     cursor: pointer;
     user-select: none;
+}
 
+.closed {
+    display: none;
+}
+
+.open {
+    display: none;
+}
+
+.active {
+    display: block;
 }
