--- a/css/hover.css
+++ b/css/hover.css
@@ -21,4 +21,13 @@ body {
     height: 200px;
     width: 200px;
     background: slateblue;
+    border-radius: 100px;
+    font-size: 1.5rem;
+    color: #fff;
+    cursor: pointer;
+    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 3s;
+}
+
+.hover {
+    transform: scale(2);
 }
