--- a/css/clock.css
+++ b/css/clock.css
@@ -5,11 +5,16 @@
 
 body {
     background: linear-gradient(to right, hsl(200, 100%, 50%), hsl(175, 100%, 50%));
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    overflow: hidden;
 }
 
 .clock {
-    width: 300px;
-    height: 300px;
+    width: 500px;
+    height: 500px;
     background-color: rgba(255, 255, 255, 1);
     border-radius: 50%;
     border: 2px solid black;
@@ -23,6 +28,7 @@ body {
     height: 100%;
     text-align: center;
     transform: rotate(var(--rotation));
+    font-size: 1.5rem;
 }
 
 .clock .number1 {--rotation: 30deg;}
