--- a/css/numbers-game.css
+++ b/css/numbers-game.css
@@ -14,9 +14,12 @@ body {
 }
 
 #game-board {
+    --grid-size: 4;
+    --cell-size: 20vmin;
+    --cell-gap: 2vmin;
     display: grid;
-    grid-template-rows: repeat(3, 20vmin);
-    grid-template-columns: repeat(4, 20vmin);
+    grid-template-rows: repeat(var(--grid-size), var(--cell-size));
+    grid-template-columns: repeat(var(--grid-size), var(--cell-size));
     background-color: #ccc;
     gap: 2vmin;
     border-radius: 1vmin;
@@ -28,3 +31,18 @@ body {
     background-color: #aaa;
     border-radius: 1vmin;
 }
+.title {
+    --x: 1;
+    --y: 2;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: var(--cell-size);
+    height: var(--cell-size);
+    background-color: yellow;
+    border-radius: 1vmin;
+    top: calc(var(--y) * (var(--cell-size) + var(--cell-gap)) + var(--cell-gap));
+    left: calc(var(--x) * (var(--cell-size) + var(--cell-gap)) + var(--cell-gap));
+}
+
