--- a/css/numbers-game.css
+++ b/css/numbers-game.css
@@ -1,6 +1,6 @@
 *, *::before, *::after {
     box-sizing: border-box;
-    font-family: sans-serif, Arial;
+    font-family: Arial;
 }
 
 body {
@@ -14,35 +14,42 @@ body {
 }
 
 #game-board {
-    --grid-size: 4;
-    --cell-size: 20vmin;
-    --cell-gap: 2vmin;
     display: grid;
-    grid-template-rows: repeat(var(--grid-size), var(--cell-size));
     grid-template-columns: repeat(var(--grid-size), var(--cell-size));
-    background-color: #ccc;
-    gap: 2vmin;
+    grid-template-rows: repeat(var(--grid-size), var(--cell-size));
+    background-color: #CCC;
+    gap: var(--cell-gap);
     border-radius: 1vmin;
-    padding: 2vmin;
+    padding: var(--cell-gap);
     position: relative;
 }
 
 .cell {
-    background-color: #aaa;
+    background-color: #AAA;
     border-radius: 1vmin;
 }
-.title {
-    --x: 1;
-    --y: 2;
+
+.tile {
     position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
     width: var(--cell-size);
     height: var(--cell-size);
-    background-color: yellow;
+    background-color: red;
     border-radius: 1vmin;
     top: calc(var(--y) * (var(--cell-size) + var(--cell-gap)) + var(--cell-gap));
     left: calc(var(--x) * (var(--cell-size) + var(--cell-gap)) + var(--cell-gap));
+    font-weight: bold;
+    background-color: hsl(200, 50%, var(--background-lightness));
+    color: hsl(200, 25%, var(--text-lightness));
+    animation: show 200ms ease-in-out;
+    transition: 100ms ease-in-out;
 }
 
+@keyframes show {
+    0% {
+        opacity: .5;
+        transform: scale(0);
+    }
+}
